.gradle/gradle.log
WARNING: You are using an unsupported version of ForgeGradle.
Please consider upgrading to ForgeGradle 5 and helping in the efforts to get old versions working on the modern toolchain.
See https://gist.github.com/TheCurle/fe7ad3ede188cbdd15c235cc75d52d4a for more info on contributing.
#################################################
         ForgeGradle 2.1.3-g6a7c715        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP unknown               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
:deobfCompileDummyTask
:getVersionJson
:extractUserdev UP-TO-DATE
:downloadClient SKIPPED
:downloadServer SKIPPED
:splitServerJar SKIPPED
:mergeJars SKIPPED
:applyBinaryPatches SKIPPED
:deobfProvidedDummyTask
:extractDependencyATs SKIPPED
:extractMcpData SKIPPED
:extractMcpMappings SKIPPED
:genSrgs SKIPPED
:deobfMcMCP SKIPPED
:sourceApiJava
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaC:\Users\horizo\Desktop\newclient\build\sources\main\java\com\amethyst\client\irc\IRCManager.java:57: error: method channel in class NetworkManager cannot be applied to given types;
        event.manager.channel(CHANNEL);
                     ^
  required: no arguments
  found: String
  reason: actual and formal argument lists differ in length
C:\Users\horizo\Desktop\newclient\build\sources\main\java\com\amethyst\client\irc\IRCManager.java:134: error: cannot find symbol
            String label = buf.readCharSequence(labelLen, StandardCharsets.UTF_8).toString();
                              ^
  symbol:   method readCharSequence(int,Charset)
  location: variable buf of type ByteBuf
C:\Users\horizo\Desktop\newclient\build\sources\main\java\com\amethyst\client\irc\IRCManager.java:165: error: cannot find symbol
            String label = buf.readCharSequence(labelLen, StandardCharsets.UTF_8).toString();
                              ^
  symbol:   method readCharSequence(int,Charset)
  location: variable buf of type ByteBuf
3 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 22.986 secs
